Add backend and documentation updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,23 @@ DEBUG=True
 SECRET_KEY=your-secret-key-here-change-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1
 
+# Database Configuration
+# For SQLite (default): leave DB_ENGINE commented out or empty
+# For PostgreSQL: uncomment and configure the settings below
+#DB_ENGINE=django.db.backends.postgresql
+#DB_NAME=classycouture
+#DB_USER=classyuser
+#DB_PASSWORD=your_secure_password
+#DB_HOST=localhost
+#DB_PORT=5432
+
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
+
+# Redis Configuration (for WebSocket Channel Layer)
+# If Redis is not available, the system will fallback to in-memory channels
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 # Email Configuration (optional)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
