--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,9 @@
-Django==4.2.8
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-python-dotenv==1.0.0
-Pillow==10.1.0
+Django==4.2.26
+djangorestframework==3.16.1
+django-cors-headers==4.9.0
+python-dotenv==1.0.1
+Pillow==11.3.0
+psycopg2-binary==2.9.10
+channels==4.2.0
+channels-redis==4.2.1
+redis==5.2.1
